<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteY="81dp">

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginBottom="78dp"
        android:ems="6"
        android:text="@string/loginBtn"
        android:onClick="login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <TextView
        android:id="@+id/studentEmail"
        android:layout_width="wrap_content"
        android:layout_height="15dp"
        android:layout_marginLeft="1dp"
        android:layout_marginStart="1dp"
        android:text="@string/student_no"
        app:layout_constraintBottom_toTopOf="@+id/studentNumber"
        app:layout_constraintStart_toStartOf="@+id/studentNumber"
        app:layout_constraintTop_toBottomOf="@+id/uqLogo" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        app:layout_constraintBottom_toTopOf="@+id/password"
        app:layout_constraintStart_toStartOf="@+id/password"
        app:layout_constraintTop_toBottomOf="@+id/studentNumber" />

    <ImageView
        android:id="@+id/uqLogo"
        android:layout_width="140dp"
        android:layout_height="130dp"
        android:layout_marginBottom="50dp"
        android:layout_marginTop="57dp"
        android:contentDescription="@string/logo"
        android:background="@drawable/lock2"
        app:layout_constraintBottom_toTopOf="@+id/studentEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/password"
        android:layout_width="213dp"
        android:layout_height="40dp"
        android:layout_marginBottom="25dp"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/loginBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/studentNumber"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginBottom="5dp"
        android:ems="10"
        android:hint="@string/s1234567"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/studentEmail" />
</android.support.constraint.ConstraintLayout>